--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "bootstrap-vue": "^2.0.0-beta",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
-    "nuxt": "^2.0.0"
+    "firebase": "^5.5.9",
+    "nuxt": "^2.0.0",
+    "nuxt-fire": "^1.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -29,6 +31,6 @@
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-vue": "^4.0.0",
     "nodemon": "^1.11.0",
-    "prettier": "1.14.3"
+    "prettier": "^1.14.3"
   }
 }
