--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "firebase": "^5.5.9",
-    "nuxt": "^2.0.0",
-    "nuxt-fire": "^1.2.1"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
