--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "firebase": "^5.5.9",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vuexfire": "^3.0.0-alpha.13"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
