--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "express": "^4.16.3",
     "firebase": "^5.5.9",
     "nuxt": "^2.0.0",
-    "vuexfire": "^3.0.0-alpha.13"
+    "vuexfire": "^3.0.0-alpha.13",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
-    "eslint": "^5.0.1",
+    "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "2.6.2",
