--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "acorn": "^6.0.4",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-beta",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "firebase": "^5.5.9",
+    "jquery": "^3.3.1",
     "nuxt": "^2.0.0",
     "vuexfire": "^3.0.0-alpha.13",
     "whatwg-fetch": "^3.0.0"
