--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "jquery": "^3.3.1",
     "nuxt": "^2.0.0",
     "vuexfire": "^3.0.0-alpha.13",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "js-cookie": "^2.2.0",
+    "cookieparser": "^0.1.0",
+    "jwt-decode": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
