--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-svg-loader": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
