--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "express": "^4.16.3",
-    "bootstrap-vue": "^2.0.0-beta",
+    "@nuxtjs/axios": "^5.0.0",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/axios": "^5.0.0"
+    "bootstrap-vue": "^2.0.0-beta",
+    "cls-bluebird": "^2.1.0",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.3",
+    "foscam-client": "^0.5.0",
+    "fs": "latest",
+    "net": "^1.0.2",
+    "nuxt": "^2.0.0",
+    "tls": "0.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
