--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "fs": "latest",
     "net": "^1.0.2",
     "nuxt": "^2.0.0",
-    "tls": "0.0.1"
+    "tls": "0.0.1",
+    "vue-fullscreen": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
