--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "nuxt": "^2.0.0",
-    "nuxt-svg-loader": "^0.1.0"
+    "nuxt-svg-loader": "^0.1.0",
+    "nuxt-purgecss": "latest"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
