--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "nuxt-purgecss": "latest"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
+    "@fullhuman/postcss-purgecss": "^1.1.0",
     "babel-eslint": "^8.2.1",
     "eslint": "^5.0.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.0.0",
     "eslint-config-prettier": "^3.1.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "2.6.2",
-    "prettier": "1.14.3"
+    "eslint-plugin-vue": "^4.0.0",
+    "glob-all": "^3.1.0",
+    "nodemon": "^1.11.0",
+    "prettier": "1.14.3",
+    "purgecss-webpack-plugin": "^1.4.0"
   }
 }
