--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "nuxt": "^2.0.0",
-    "nuxt-svg-loader": "^0.1.0",
-    "nuxt-purgecss": "latest"
+    "nuxt-svg-loader": "^0.1.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
@@ -32,6 +31,7 @@
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-vue": "^4.0.0",
     "glob-all": "^3.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3",
     "purgecss-webpack-plugin": "^1.4.0"
