--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "nuxt": "^2.0.0",
-    "nuxt-svg-loader": "^0.1.0"
+    "nuxt-svg-loader": "^0.1.0",
+    "axios": "^0.16.1",
+    "body-parser": "^1.17.2",
+    "express-session": "^1.15.3",
+    "nuxt-edge": "latest"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
