--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
     "@vue/eslint-config-prettier": "^4.0.1",
+    "axios": "^0.16.1",
+    "body-parser": "^1.17.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
-    "nuxt": "^2.0.0",
-    "nuxt-svg-loader": "^0.1.0",
-    "axios": "^0.16.1",
-    "body-parser": "^1.17.2",
     "express-session": "^1.15.3",
-    "nuxt-edge": "latest"
+    "moment": "^2.23.0",
+    "number-to-words": "^1.2.4",
+    "nuxt": "^2.0.0",
+    "nuxt-edge": "latest",
+    "nuxt-svg-loader": "^0.1.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
