--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
+    "crypto-random-string": "^1.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.3",
+    "jquery": "^3.3.1",
     "moment": "^2.23.0",
     "number-to-words": "^1.2.4",
     "nuxt": "^2.0.0",
